rust/tests/errors/unclosed_class.expected.err

 file: unclosed_class.hyper:3:1
error: This 'class' block is never closed.
 3 | class Card:
   | ^^^^^^^^^^^ opened here

 help: Close with 'end'

